--- a/index.html
+++ b/index.html
@@ -387,6 +387,32 @@
                 <use href="./images/symbol-defs.svg#icon-close"></use>
             </svg>
         </button>
+        <h2 class="form-text">Залиште свої дані, ми вам передзвонимо</h2>
+        <form name="contact-form">
+            <label class="form-label" for="person-name">Ім'я</label>
+            <div class="form-control">
+                <input class="form-input" id="person-name" type="text" name="person-name">
+                <svg class="form-icon" width="18" height="18">
+                    <use href="./images/symbol-defs.svg#icon-person"></use>
+                </svg>
+            </div>
+
+            <label class="form-label" for="person-phone">Телефон</label>
+            <div class="form-control">
+                <input class="form-input" id="person-phone" type="tel" name="person-phone">
+                <svg class="form-icon" width="18" height="18">
+                    <use href="./images/symbol-defs.svg#icon-phone"></use>
+                </svg>
+            </div>
+
+            <label class="form-label" for="person-email">Пошта</label>
+            <div class="form-control">
+                <input class="form-input" id="person-email" type="email" name="person-email">
+                <svg class="form-icon" width="18" height="18">
+                    <use href="./images/symbol-defs.svg#icon-email"></use>
+                </svg>
+            </div>
+        </form>
     </div>
 </div>
 
