--- a/index.html
+++ b/index.html
@@ -377,6 +377,19 @@
                 </li>
             </ul>
         </div>
+        <div class="footer-form-div">
+            <p class="footer-form-text">Підпишіться на розсилку</p>
+            <form class="form-footer">
+                <label for="mail"></label>
+                <input id="mail" type="email" name="mail" placeholder="E-mail">
+                <button class="footer-button" type="submit">
+                    Підписатися
+                    <svg class="footer-btn-icon" width="24" height="24">
+                        <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
     </div>
 </footer>
 
@@ -420,7 +433,7 @@
                 name="person-comment" 
                 placeholder="Введіть текст"
                 ></textarea>
-
+                
                 <input
                  class="checkbox-input visually-hidden" 
                  id="terms-checkbox" 
