--- a/index.html
+++ b/index.html
@@ -380,8 +380,7 @@
         <div class="footer-form-div">
             <p class="footer-form-text">Підпишіться на розсилку</p>
             <form class="form-footer">
-                <label for="mail"></label>
-                <input id="mail" type="email" name="mail" placeholder="E-mail">
+                <input class="footer-input" id="mail" type="email" name="mail" placeholder="E-mail">
                 <button class="footer-button" type="submit">
                     Підписатися
                     <svg class="footer-btn-icon" width="24" height="24">
