--- a/portfolio.html
+++ b/portfolio.html
@@ -253,6 +253,18 @@
                     </li>
                 </ul>
             </div>
+            <div class="footer-form-div">
+                <p class="footer-form-text">Підпишіться на розсилку</p>
+                <form class="form-footer">
+                    <input class="footer-input" id="mail" type="email" name="mail" placeholder="E-mail">
+                    <button class="footer-button" type="submit">
+                        Підписатися
+                        <svg class="footer-btn-icon" width="24" height="24">
+                            <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
 </body>
