--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
                     </div>
                     <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </div>
                 </li>
             </ul>
         </div>
@@ -399,7 +398,7 @@
                 <use href="./images/symbol-defs.svg#icon-close"></use>
             </svg>
         </button>
-        <h2 class="form-text">Залиште свої дані, ми вам передзвонимо</h2>
+        <p class="form-text">Залиште свої дані, ми вам передзвонимо</p>
         <form name="contact-form" autocomplete="off">
             <label class="form-label" for="person-name">Ім'я</label>
             <div class="form-control">
